Remove unused imports across core and web modules. Simplify and clean up service method implementations.